# test-helper-agent

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_HISTORY.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  constraints.txt  docker-compose.yml  env.example  example_usage.py  license_utils.sh  lint_errors.txt  mcp.json  mkdocs.yml  mock_gh.sh  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  setup_github_repo.sh  test_setup_script.sh  tsconfig.json
.claude/: settings.json
.claude/commands/: commit.md
.claude/hooks/: python_final_quality_check.sh  python_quality_check.sh
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  postCreateCommand.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  claude.yml  e2e-web.yml
app/: __init__.py  activities.py  starter.py  worker.py  workflow.py
constraints/: python3.12-linux-x86_64.txt  python3.13-linux-x86_64.txt
data/: .gitkeep  README.md
data/projects/3d91f309-a339-4693-ab97-7dfae3f2e4c0/: metadata.json
docs/: configuration.md  index.md  installation.md  quickstart.md
docs/about/: changelog.md  license.md
docs/api/: app.md  interfaces.md  models.md  overview.md  utils.md
docs/development/: code-style.md  contributing.md  e2e-web.md  testing.md
docs/guides/: cli.md  environment.md  logging.md  restapi.md  temporal_agents.md
docs/source/: __init__.py  changelog.rst  conf.py  development.rst  index.rst  installation.rst  overview.rst  quickstart.rst
docs/source/api/: app.rst  base.rst  index.rst  interfaces.rst  models.rst  types.rst  utils.rst
scripts/: serve-test-sites.sh
specs/001-e2e-ai-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-e2e-ai-agent/contracts/: api-contract.yaml
specs/002-real-impl/: spec.md  tasks.md  tasks2.md
src/clean_interfaces/: __init__.py  app.py  base.py  main.py  types.py
src/clean_interfaces/interfaces/: __init__.py  base.py  cli.py  factory.py  restapi.py
src/clean_interfaces/models/: __init__.py  api.py  io.py
src/clean_interfaces/utils/: __init__.py  file_handler.py  logger.py  settings.py
src/test_helper/: __init__.py  app.py  base.py  main.py  types.py
src/test_helper/adapters/: __init__.py  factory.py  interfaces.py
src/test_helper/agents/: __init__.py  base.py  capture_agent.py  diagnostic_agent.py  fix_agent.py  generator_agent.py  openai_adapter.py  syntax_fix_agent.py  tools.py
src/test_helper/cli/: __init__.py  e2e.py  main.py  project.py  workflows.py
src/test_helper/e2e/: __init__.py  settings.py
src/test_helper/interfaces/: __init__.py  base.py  cli.py  factory.py  restapi.py
src/test_helper/lib/: __init__.py  (+1 more)
temporal-config/: development-sql.yaml
test_sites/: README.md
test_sites/landing_static/: index.html  script.js  styles.css  test_cases.html
test_sites/shop_multipage/: app.js  cart.html  checkout.html  index.html  login.html  product.html  styles.css  sw.js  test_cases.html
test_sites/spa_tasks/: app.js  index.html  styles.css  test_cases.html
tests/: __init__.py  conftest.py
tests/api/: test_browser_use_integration.py
tests/contract/: __init__.py  test_capture_start.py  test_projects_delete.py  test_projects_get.py  test_projects_list.py  test_projects_patch.py  test_projects_post.py
tests/e2e/: test_browser_use_e2e.py  test_cli_e2e_commands.py  test_cli_interface.py  test_restapi_interface.py  test_swagger_ui.py
tests/e2e_web/: README.md  __init__.py  conftest.py  test_agents_e2e_playwright.py  test_landing_nav_playwright.py  test_landing_playwright.py  test_responsive_playwright.py  test_shop_debug_playwright.py  test_shop_fail_checkout_playwright.py  test_shop_multipage_agents.py  test_shop_network_playwright.py  test_shop_playwright.py  test_spa_extra_playwright.py  test_spa_playwright.py  test_spa_tasks_agents.py
tests/helpers/: pexpect_debug.py
typings/: README.md
typings/fastapi/: __init__.pyi  testclient.pyi
typings/httpx/: __init__.pyi
typings/nox/: __init__.pyi  sessions.pyi
typings/pytest/: __init__.pyi
typings/uvicorn/: __init__.pyi  config.pyi
(+116 files in other folders)
